@@ -68,3 +68,6 @@ $_lang['mse2_prop_forceSearch'] = 'Обязательный поиск для в
 $_lang['mse2_prop_tplForm'] = 'Чанк с формой для вывода.';
 $_lang['mse2_prop_autocomplete'] = 'Настройка автодополнения. Возможные варианты: "results" - поиск по сайту (для вывода результатов будет вызван сниппет, указанный в "element"), "queries" - поиск по таблице запросов, "0" - выключить автодополнение.';
 $_lang['mse2_prop_pageId'] = 'Id страницы, на которую будет отправлен поисковый запрос. По умолчанию - текущая страница.';
+
+$_lang['mse2_prop_fields'] = 'Список проиндексированных полей ресурса для поиска. Каждому полю можно указывать поисковый вес через двоеточие.';
+$_lang['mse2_prop_onlyIndex'] = 'Искать только по индексу слов, без добавления бонусов за точное совпадение фразы в простом поиске через LIKE.';
